flux/apps/base/rundeck/security/authorization-policy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: rundeck-ingress-authz
  namespace: rundeck
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rundeck
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system"]
    - from:
        - source:
            namespaces: ["rundeck"]
